add base code for class-03

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -31,21 +31,8 @@
     </header>
     <main>
       <section id="articles" class="tab-content">
-        <div>
-          <ul id="filters">
-            <li>
-              <select id="author-filter">
-                <option value="">-- Filter by Authors --</option>
-              </select>
-            </li>
-            <li>
-              <select id="category-filter">
-                <option value="">-- Filter by Categories --</option>
-              </select>
-            </li>
-          </ul>
-        </div>
-        <article class="template" data-category="cat">
+
+        <article class="template" data-category="placeholder-category">
           <header>
             <h1>Title</h1>
             <div class="byline">
@@ -74,7 +61,9 @@
     <footer>
       &copy; 2016 Code Fellows | Static Blog | Happy Ipsum!
     </footer>
+    <!-- Vendor Files -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
+    <!-- Model Files -->
     <script src="scripts/blogArticles.js"></script>
     <script src="scripts/article.js"></script>
     <!-- TODO: Link up our new js file! -->
