--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -31,7 +31,20 @@
     </header>
     <main>
       <section id="articles" class="tab-content">
-
+        <div>
+          <ul id="filters">
+            <li>
+              <select id="author-filter">
+                <option value="">-- Filter by Authors --</option>
+              </select>
+            </li>
+            <li>
+              <select id="category-filter">
+                <option value="">-- Filter by Categories --</option>
+              </select>
+            </li>
+          </ul>
+        </div>
         <article class="template" data-category="placeholder-category">
           <header>
             <h1>Title</h1>
