--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -32,9 +32,18 @@
     <main>
       <section id="articles" class="tab-content">
         <div>
-          /* IN-CLASS TODO: Build out our Author and Category
-              select boxes with initial options
-          */
+          <ul id="filters">
+            <li>
+              <select id="author-filter">
+                <option value="">-- Filter by Authors --</option>
+              </select>
+            </li>
+            <li>
+              <select id="category-filter">
+                <option value="">-- Filter by Categories --</option>
+              </select>
+            </li>
+          </ul>
         </div>
         <article class="template" data-category="placeholder-category">
           <header>
